--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "envidat-utils[dotenv]>=0.5.1",
     "rio-cogeo>=3.2.0",
+    "rasterio>=1.2.10",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
