--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
-        args: ["--max-line-length=88"]
+        args: ["--max-line-length=88", "--ignore=D301"]
 
   # Lint: Markdown
   - repo: https://github.com/igorshubovych/markdownlint-cli
