--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,12 @@ dependencies = [
     "envidat-utils[dotenv]>=0.5.1",
     "rio-cogeo>=3.2.0",
     "rasterio>=1.2.10",
+    "click>=8.1.3",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 keywords = ["envidat", "cog", "geotiff", "s3"]
-
-[tool.pdm]
-[tool.pdm.dev-dependencies]
 
 [build-system]
 requires = ["pdm-pep517"]
